# zenithvenice

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
deploy/systemd/: herald.service
src/herald/: __init__.py  __main__.py  config.py  logging_setup.py  main.py
src/herald/bot/: __init__.py  callbacks.py  chat_membership.py  dispatcher.py  hub.py  hub_callbacks.py  keyboards.py  middleware.py  reactions.py  views.py
src/herald/bot/commands/: __init__.py  about.py  admin.py  categories.py  latest.py  saved.py  search.py  settings.py  start.py
src/herald/data/: __init__.py  bookmarks.py  chats.py  client.py  deliveries.py  models.py  posts.py  reactions.py  users.py
src/herald/publisher/: __init__.py  chat_fanout.py  digest.py  dispatch.py  poller.py  realtime.py  scheduler.py  scheduling.py  user_fanout.py
src/herald/render/: __init__.py  bullets.py  card.py  category.py  credibility.py  digest.py  sources.py
src/herald/utils/: __init__.py  escape.py  hostname.py  quiet_hours.py  time_ago.py
supabase/: schema.sql
supabase/migrations/: 001_telegram_integration.sql  002_subscribed_chats.sql
tests/: conftest.py  test_bullets.py  test_digest.py  test_hostname.py  test_quiet_hours.py  test_reactions.py  test_realtime_payload.py  test_render_card.py  test_scheduler.py  test_user_fanout.py
