[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herald"
version = "0.2.2"
description = "Telegram delivery layer for India Verified"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "India Verified" }]

dependencies = [
    "aiogram>=3.4,<4.0",
    "supabase>=2.5,<3.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.1",
    "python-dateutil>=2.8",
    "httpx>=0.25",
    "uvloop>=0.19; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.8",
    "freezegun>=1.4",
]

[project.scripts]
herald = "herald.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/herald"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RET", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = "src"
